src/test/deca/context/valid/ContextSansObjet/OperationsBooleennes/And.deca
//Description :
//	Vérification contextuelle de l'opérateur &&
//
//Résultats :
//	ok

{
    boolean x = true;
    boolean y = false && x;
}