src/test/deca/context/invalid/provided/ContextSansObjet/OperationsBooleennes/And_String.deca
//Description :
//	Vérification contextuelle de la sortie de l'opérateur && (différente de string). Si le résultat générait un string il serait affichable.
//
//Résultats :
//	Erreur Contextuelle
//  Ligne 10 : type non affichable(les types qu'on peut afficher sont int,float et string)

{
    boolean x = true;
    println(x && false);
}